--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 drafts/alberto/texas_2022_delays.csv
+drafts/rawdata/iahhist/Detailed_Statistics_Departures (10).csv
